[package]
name = "movie_log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
walkdir = "2"
matroska = "0.19.0"
serde = { version = "1.0.148", features = ["derive"] }
toml = "0.5.9"
reqwest = {version = "0.11", features = ["blocking"]} 
select = "0.5.0"
difflib = "0.4.0"
