[package]
name = "movie_log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "3.0.1"
csv = "1.2.0"
toml = "0.7.2"
select = "0.6.0"
walkdir = "2.3.2"
difflib = "0.4.0"
matroska = "0.20.1"
serde = { version = "1.0.152", features = ["derive"] }
reqwest = {version = "0.11.14", features = ["blocking"]} 